Tried to make ears ride player head, failed...

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -1,2 +1,4 @@
 tile.hsmp:start_button.name=Start Button
 item.hsmp:hsmp_menu=HSMP Menu
+item.spawn_egg.entity.hsmp:elf_ears.name=Spawn Elf Ears
+entity.hsmp:elf_ears.name=Elf Ears
