--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -2,3 +2,15 @@ tile.hsmp:start_button.name=Start Button
 item.hsmp:hsmp_menu=HSMP Menu
 item.spawn_egg.entity.hsmp:elf_ears.name=Spawn Elf Ears
 entity.hsmp:elf_ears.name=Elf Ears
+item.hsmp:leather_with_pale_ears_helmet=Leather With Pale Ears Helmet
+item.hsmp:leather_with_pale_ears_chestplate=Leather With Pale Ears Chestplate
+item.hsmp:leather_with_pale_ears_leggings=Leather With Pale Ears Leggings
+item.hsmp:leather_with_pale_ears_boots=Leather With Pale Ears Boots
+item.hsmp:elf_leather_armor_helmet=Elf Leather Armor Helmet
+item.hsmp:elf_leather_armor_chestplate=Elf Leather Armor Chestplate
+item.hsmp:elf_leather_armor_leggings=Elf Leather Armor Leggings
+item.hsmp:elf_leather_armor_boots=Elf Leather Armor Boots
+item.hsmp:elf_ears_helmet=Elf Ears Helmet
+item.hsmp:elf_ears_chestplate=Elf Ears Chestplate
+item.hsmp:elf_ears_leggings=Elf Ears Leggings
+item.hsmp:elf_ears_boots=Elf Ears Boots
