--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -1,16 +1,10 @@
 tile.hsmp:start_button.name=Start Button
 item.hsmp:hsmp_menu=HSMP Menu
-item.spawn_egg.entity.hsmp:elf_ears.name=Spawn Elf Ears
-entity.hsmp:elf_ears.name=Elf Ears
-item.hsmp:leather_with_pale_ears_helmet=Leather With Pale Ears Helmet
-item.hsmp:leather_with_pale_ears_chestplate=Leather With Pale Ears Chestplate
-item.hsmp:leather_with_pale_ears_leggings=Leather With Pale Ears Leggings
-item.hsmp:leather_with_pale_ears_boots=Leather With Pale Ears Boots
-item.hsmp:elf_leather_armor_helmet=Elf Leather Armor Helmet
-item.hsmp:elf_leather_armor_chestplate=Elf Leather Armor Chestplate
-item.hsmp:elf_leather_armor_leggings=Elf Leather Armor Leggings
-item.hsmp:elf_leather_armor_boots=Elf Leather Armor Boots
-item.hsmp:elf_ears_helmet=Elf Ears Helmet
-item.hsmp:elf_ears_chestplate=Elf Ears Chestplate
-item.hsmp:elf_ears_leggings=Elf Ears Leggings
-item.hsmp:elf_ears_boots=Elf Ears Boots
+item.hsmp:elf_ears=Elf Ears\n\n§3Elf Only Item!\n§4Locked in Helmet Slot unless holding an elf helmet!
+item.hsmp:dark_elf_ears=Dark Elf Ears\n\n§3Elf Only Item!\n§4Locked in Helmet Slot unless holding an elf helmet!
+item.hsmp:elf_leather_armor_helmet=Elf Leather Helmet\n\n§3Elf Only Item!
+item.hsmp:elf_leather_armor_chestplate=Elf Leather Chestplate\n\n§3Elf Only Item!
+item.hsmp:elf_leather_armor_leggings=Elf Leather Leggings\n\n§3Elf Only Item!
+item.hsmp:elf_leather_armor_boots=Elf Leather Boots\n\n§3Elf Only Item!
+hsmp:system_items=§e§lHSMP System Items\n\n§cCREATIVE ONLY!
+hsmp:elf_armor=Elf Armor
