--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -8,3 +8,4 @@ item.hsmp:elf_leather_armor_leggings=Elf Leather Leggings\n\n§3Elf Only Item!
 item.hsmp:elf_leather_armor_boots=Elf Leather Boots\n\n§3Elf Only Item!
 hsmp:system_items=§e§lHSMP System Items\n\n§cCREATIVE ONLY!
 hsmp:elf_armor=Elf Armor
+item.hsmp:half_orc_fne=Half Orc Fangs And Ears
