--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -2,10 +2,10 @@ tile.hsmp:start_button.name=Start Button
 item.hsmp:hsmp_menu=HSMP Menu
 item.hsmp:elf_ears=Elf Ears\n\n§3Elf Only Item!\n§4Locked in Helmet Slot unless holding an elf helmet!
 item.hsmp:dark_elf_ears=Dark Elf Ears\n\n§3Elf Only Item!\n§4Locked in Helmet Slot unless holding an elf helmet!
-item.hsmp:elf_leather_armor_helmet=Elf Leather Helmet\n\n§3Elf Only Item!
-item.hsmp:elf_leather_armor_chestplate=Elf Leather Chestplate\n\n§3Elf Only Item!
-item.hsmp:elf_leather_armor_leggings=Elf Leather Leggings\n\n§3Elf Only Item!
-item.hsmp:elf_leather_armor_boots=Elf Leather Boots\n\n§3Elf Only Item!
+item.hsmp:elf_leather_armor_helmet=Elf Leather Helmet\n\n§3Elf Only Item!\n§4This item is Eperimental and might not be in the final version!
+item.hsmp:elf_leather_armor_chestplate=Elf Leather Chestplate\n\n§3Elf Only Item!\n§4This item is Eperimental and might not be in the final version!
+item.hsmp:elf_leather_armor_leggings=Elf Leather Leggings\n\n§3Elf Only Item!\n§4This item is Eperimental and might not be in the final version!
+item.hsmp:elf_leather_armor_boots=Elf Leather Boots\n\n§3Elf Only Item!\n§4This item is Eperimental and might not be in the final version!
 hsmp:system_items=§e§lHSMP System Items\n\n§cCREATIVE ONLY!
 hsmp:elf_armor=Elf Armor
 item.hsmp:half_orc_fne=Half Orc Fangs And Ears
