Fixed all error caused by changed textures and ids

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -1,12 +1,11 @@
-tile.hsmp:start_button.name=Start Button
-item.hsmp:hsmp_menu=HSMP Menu
-item.hsmp:elf_ears=Elf Ears\n\n§3Elf Only Item!\n§cLocked in Helmet Slot unless holding an elf helmet!
-item.hsmp:dark_elf_ears=Dark Elf Ears\n\n§3Elf Only Item!\n§cLocked in Helmet Slot unless holding an elf helmet!
-item.hsmp:elf_leather_armor_helmet=Elf Leather Helmet\n\n§3Elf Only Item!\n§cThis item is Eperimental and might not be in the final version!
-item.hsmp:elf_leather_armor_chestplate=Elf Leather Chestplate\n\n§3Elf Only Item!\n§cThis item is Eperimental and might not be in the final version!
-item.hsmp:elf_leather_armor_leggings=Elf Leather Leggings\n\n§3Elf Only Item!\n§cThis item is Eperimental and might not be in the final version!
-item.hsmp:elf_leather_armor_boots=Elf Leather Boots\n\n§3Elf Only Item!\n§cThis item is Eperimental and might not be in the final version!
-hsmp:system_items=§e§lHSMP System Items\n\n§cCREATIVE ONLY!
-item.hsmp:half_orc_fne=Half Orc Fangs And Ears\n\n§aHalf Orc Only Item!\n§cLocked in Helmet Slot unless holding an Half Orc helmet!
-item.hsmp:half_orc_leather_helmet=§a[HO]§r Leather Helmet\n\n§4This Item is Experimental and Might change in the future!
-item.hsmp:half_orc_iron_helmet=§a[ HO ]§r Iron Helmet\n\n§cThis item is Experimental and might change in the future!
+hsmp:system_items=§d§lHSMP System Items\n\n§cCREATIVE ONLY! / OP Only!
+tile.hsmp:start_button.name=§dStart Button\n\n§cCREATIVE ONLY! / OP Only!
+item.hsmp:hsmp_menu=§l§d[ HSMP Menu ]
+item.hsmp:elf_ears=§3[ E ]§r Elf Ears
+item.hsmp:dark_elf_ears=§3[ E ]§r Dark Elf Ears
+item.hsmp:elf_leather_helmet=§3[ E ]§r Leather Helmet
+item.hsmp:elf_iron_helmet=§3[ E ]§r Iron Helmet
+item.hsmp:elf_gold_helmet=§3[ E ]§r Golden Helmet
+item.hsmp:half_orc_fne=§a[ HO ]§r Half Orc Fangs And Ears
+item.hsmp:half_orc_leather_helmet=§a[ HO ]§r Leather Helmet
+item.hsmp:half_orc_iron_helmet=§a[ HO ]§r Iron Helmet
