--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -9,3 +9,5 @@ item.hsmp:elf_gold_helmet=§3[ E ]§r Golden Helmet
 item.hsmp:half_orc_fne=§a[ HO ]§r Half Orc Fangs And Ears
 item.hsmp:half_orc_leather_helmet=§a[ HO ]§r Leather Helmet
 item.hsmp:half_orc_iron_helmet=§a[ HO ]§r Iron Helmet
+tile.hsmp:spell_book.name=Spell Book
+item.hsmp:spell_book=Spell Book
