--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -11,3 +11,4 @@ item.hsmp:half_orc_leather_helmet=§a[ HO ]§r Leather Helmet
 item.hsmp:half_orc_iron_helmet=§a[ HO ]§r Iron Helmet
 tile.hsmp:spell_book.name=Spell Book
 item.hsmp:spell_book=Spell Book
+item.hsmp:test_item=[ OP ONLY ] Test Item
