--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -16,3 +16,8 @@ item.hsmp:admin_tool=[ OP ONLY ] Admin Tool
 tile.hsmp:cr_food.name=Cash Register Restaurant
 item.spawn_egg.entity.hsmp:adam.name=Spawn Adam
 entity.hsmp:adam.name=Adam
+item.spawn_egg.entity.hsmp:restaurant_worker.name=Spawn Restaurant Worker
+entity.hsmp:restaurant_worker.name=Restaurant Worker
+tile.hsmp:bottom_butcher_door.name=bottom_butcher_door
+tile.hsmp:top_butcher_door.name=top_butcher_door
+tile.hsmp:restaurant_door_handle.name=restaurant_door_handle
