Add service bell and coin box blocks, expand economy
Introduces new service bell and coin box blocks with associated entities, models, textures, and sounds. Adds earthwright and lumberjack modules to the economy system, refactors price modifier logic, and updates UI and interaction scripts for new store types. Also improves currency formatting and expands admin commands.

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -21,3 +21,7 @@ entity.hsmp:restaurant_worker.name=Restaurant Worker
 tile.hsmp:bottom_butcher_door.name=bottom_butcher_door
 tile.hsmp:top_butcher_door.name=top_butcher_door
 tile.hsmp:restaurant_door_handle.name=restaurant_door_handle
+tile.hsmp:coin_box_re.name=[ RE ] Coint Box
+tile.hsmp:service_bell.name=service_bell
+item.spawn_egg.entity.hsmp:service_bell_entity.name=Spawn service_bell_entity
+entity.hsmp:service_bell_entity.name=service_bell_entity
