--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -25,3 +25,6 @@ tile.hsmp:coin_box_re.name=[ RE ] Coint Box
 tile.hsmp:service_bell.name=service_bell
 item.spawn_egg.entity.hsmp:service_bell_entity.name=Spawn service_bell_entity
 entity.hsmp:service_bell_entity.name=service_bell_entity
+item.spawn_egg.entity.hsmp:witch.name=Spawn Witch Evangeline
+entity.hsmp:witch.name=Witch Evangeline
+tile.hsmp:witch_talk_trigger.name=Witch Talk Trigger
