--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -29,3 +29,4 @@ item.spawn_egg.entity.hsmp:witch.name=Spawn Witch Evangeline
 entity.hsmp:witch.name=Witch Evangeline
 item.hsmp:empty_witch_bottle=Empty Witch Bottle
 item.hsmp:fire_resistance_witch_potion=[ §dWitch§r ] §cFire Resistance§r Potion
+item.hsmp:harming_witch_potion=[ §dWitch§r ] §4Harming§r Potion
