--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -31,3 +31,4 @@ item.hsmp:empty_witch_bottle=Empty Witch Bottle
 item.hsmp:fire_resistance_witch_potion=[ §dWitch§r ] §cFire Resistance§r Potion
 item.hsmp:harming_witch_potion=[ §dWitch§r ] §4Harming§r Potion
 item.hsmp:healing_witch_potion=[ §dWitch§r ] §aHealing§r Potion
+item.hsmp:invisibity_witch_potion=[ §dWitch§r ] §qInvisibility§r Potion
