Add Leaping Witch Potion item and assets
Introduces the Leaping Witch Potion, including its item definition, texture, and localization. Updates crafting catalog and economy script to support the new potion.

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -32,3 +32,4 @@ item.hsmp:fire_resistance_witch_potion=[ §dWitch§r ] §cFire Resistance§r Pot
 item.hsmp:harming_witch_potion=[ §dWitch§r ] §4Harming§r Potion
 item.hsmp:healing_witch_potion=[ §dWitch§r ] §aHealing§r Potion
 item.hsmp:invisibity_witch_potion=[ §dWitch§r ] §qInvisibility§r Potion
+item.hsmp:leaping_witch_potion=[ §dWitch§r ] §6Leaping§r Potion
