--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -33,3 +33,4 @@ item.hsmp:harming_witch_potion=[ §dWitch§r ] §4Harming§r Potion
 item.hsmp:healing_witch_potion=[ §dWitch§r ] §aHealing§r Potion
 item.hsmp:invisibity_witch_potion=[ §dWitch§r ] §qInvisibility§r Potion
 item.hsmp:leaping_witch_potion=[ §dWitch§r ] §6Leaping§r Potion
+item.hsmp:nightvision_witch_potion=[ §dWitch§r ] §bNight Vision§r Potion
