Add Poison Witch Potion item
Introduces the Poison Witch Potion with associated item definition, texture, and localization. Updates crafting catalog and economy script to support the new potion.

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -34,3 +34,4 @@ item.hsmp:healing_witch_potion=[ §dWitch§r ] §aHealing§r Potion
 item.hsmp:invisibity_witch_potion=[ §dWitch§r ] §qInvisibility§r Potion
 item.hsmp:leaping_witch_potion=[ §dWitch§r ] §6Leaping§r Potion
 item.hsmp:nightvision_witch_potion=[ §dWitch§r ] §bNight Vision§r Potion
+item.hsmp:poison_witch_potion=[ §dWitch§r ] §2Poison§r Potion
