Add regeneration witch potion item
Introduces the regeneration witch potion, including its item definition, texture, localization, and catalog entry. Updates economy script to reference the new potion and adds the corresponding item texture.

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -35,3 +35,4 @@ item.hsmp:invisibity_witch_potion=[ §dWitch§r ] §qInvisibility§r Potion
 item.hsmp:leaping_witch_potion=[ §dWitch§r ] §6Leaping§r Potion
 item.hsmp:nightvision_witch_potion=[ §dWitch§r ] §bNight Vision§r Potion
 item.hsmp:poison_witch_potion=[ §dWitch§r ] §2Poison§r Potion
+item.hsmp:regen_witch_potion=[ §dWitch§r ] §cRegeneration§r Potion
