Add slowness and strength witch potions
Introduced new slowness and strength witch potion items, including their JSON definitions, textures, and localization entries. Updated crafting catalog and economy script to support the new potions.

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -36,3 +36,5 @@ item.hsmp:leaping_witch_potion=[ §dWitch§r ] §6Leaping§r Potion
 item.hsmp:nightvision_witch_potion=[ §dWitch§r ] §bNight Vision§r Potion
 item.hsmp:poison_witch_potion=[ §dWitch§r ] §2Poison§r Potion
 item.hsmp:regen_witch_potion=[ §dWitch§r ] §cRegeneration§r Potion
+item.hsmp:slowness_witch_potion=[ §dWitch§r ] §7Slowness§r Potion
+item.hsmp:strength_witch_potion=[ §dWitch§r ] §aStrength§r Potion
