--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -38,3 +38,4 @@ item.hsmp:poison_witch_potion=[ §dWitch§r ] §2Poison§r Potion
 item.hsmp:regen_witch_potion=[ §dWitch§r ] §cRegeneration§r Potion
 item.hsmp:slowness_witch_potion=[ §dWitch§r ] §7Slowness§r Potion
 item.hsmp:strength_witch_potion=[ §dWitch§r ] §aStrength§r Potion
+item.hsmp:swiftness_witch_potion=[ §dWitch§r ] §bSwiftness§r Potion
