Add Weakness Potion

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -39,3 +39,4 @@ item.hsmp:regen_witch_potion=[ §dWitch§r ] §cRegeneration§r Potion
 item.hsmp:slowness_witch_potion=[ §dWitch§r ] §7Slowness§r Potion
 item.hsmp:strength_witch_potion=[ §dWitch§r ] §aStrength§r Potion
 item.hsmp:swiftness_witch_potion=[ §dWitch§r ] §bSwiftness§r Potion
+item.hsmp:weakness_witch_potion=[ §dWitch§r ] §8Weakness§r Potion
