Add new blocks, entities, scripts, and quest logic
Introduces 'darmud' and 'lock_block' blocks, new entities (mroth_pos, sofia_corpse), and related assets. Adds quest logic for 'Arm Yourself' and Sofia, new logging system with commands, and updates main scripts to integrate new features. Includes new textures, models, sounds, and animations for added content, and updates menus and quest progress tracking.

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -42,3 +42,10 @@ item.hsmp:swiftness_witch_potion=[ §dWitch§r ] §bSwiftness§r Potion
 item.hsmp:weakness_witch_potion=[ §dWitch§r ] §8Weakness§r Potion
 item.spawn_egg.entity.hsmp:weaponsmith.name=Spawn Weaponsmith
 entity.hsmp:weaponsmith.name=Weaponsmith
+tile.hsmp:lock_block.name=lock_block
+item.spawn_egg.entity.hsmp:sofia_corpse.name=Spawn sofia_corpse
+entity.hsmp:sofia_corpse.name=sofia_corpse
+item.hsmp:sofia_corpse_back=Sofia's Body
+tile.hsmp:darmud.name=Darmud
+item.spawn_egg.entity.hsmp:mroth_pos.name=Spawn Mroth Position
+entity.hsmp:mroth_pos.name=Mroth Position
